Updated to Step: 261
Basic HTML Website Submission Assignment

--- a/Basic_HTML_and_CSS/Basic_HTML_5.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_5.html
@@ -4,5 +4,6 @@
 		<link rel="stylesheet" type="text/css" href="Basic_CSS_2.css">
 		<p>Styled font.</p>
 		<h1>&lt; Greater than and less than can be confused as tags in HTML &gt;</h1>
+		<p><a href="https://learncodinganywhere.com/" target="new">This link</a> opens in a <em>new tab</em></p>
 	</body>
 </html>
