--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -106,7 +106,7 @@
             <div class="card">
                 <img class="card-img-top" src="Img/ghostintheshell.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title">Kong: Skull Island</h4>
+                    <h4 class="card-title">Ghost in the Shell</h4>
                     <p>In the near future, Major Mila Kilian is the first of her kind: A human saved from a terrible crash, who is cyber-enhanced to be a perfect soldier devoted to stopping the world's most dangerous criminals.</p> <br>
                     <span class="badge badge-pill badge-info">12:00pm</span>
                     <span class="badge badge-pill badge-info">1:30pm</span>
@@ -122,7 +122,7 @@
             <div class="card">
                 <img class="card-img-top" src="Img/beautyandthebeast.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title">Beaty and the Beast</h4>
+                    <h4 class="card-title">Beauty and the Beast</h4>
                     <p>A selfish prince is cursed to become a monster for the rest of his life, unless he learns to fall in love with a beautiful young woman, he keeps prisoner.</p> <br>
                     <span class="badge badge-pill badge-info">12:00pm</span>
                     <span class="badge badge-pill badge-info">1:30pm</span>
@@ -138,6 +138,16 @@
         </div>
         <!-- END SHOWTIMES-->
 
+        <!-- JUMBOTRON HEADING -->
+        <div class="jumbotron jumbotron-fluid bg-info mt-5 text-center">
+            <div class="container">
+                <h1 class="display-4 hidden-sm-down" style="color:#fff;font-family:roboto;font-weight:900;text-transform:uppercase;">Movie Deals</h1>
+                <p class="lead">Check out our monthly deals...</p>
+                <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#register">See our monthly movie deals!</button>
+            </div>
+        </div>
+        <!-- END JUMBOTRON HEADING -->
+
         <!-- REWARDS -->
         <div class="text-center">
             <form>
@@ -145,10 +155,52 @@
                 <div class="form-group">
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-secondary btn-info popover-dismiss" data-container="body" data-toggle="popover" data-placement="top" data-content="Submit your email to receive great movie reward deals!">
+                    Sign up!
+                  </button>
             </form>
         </div>
         <!-- END REWARDS -->
+
+        <!-- FORM MODAL -->
+        <div class="modal" tabindex="-1" role="dialog" id="register">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Register to receive movie deals</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <fieldset class="form-group">
+                            <label for="firstname">First Name:</label>
+                            <input type="text" class="form-control" id="firstname" placeholder="First Name">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="lastname">Last Name:</label>
+                            <input type="text" class="form-control" id="lastname" placeholder="Last Name">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="email">Email:</label>
+                            <input type="text" class="form-control" id="email" placeholder="Email">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="password">Password:</label>
+                            <input type="text" class="form-control" id="password" placeholder="Password">
+                        </fieldset>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+        </div>
+        <!-- END FORM MODAL -->
+
 
         <!-- FOOTER -->
         <div class="container my-5">
@@ -176,5 +228,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+    <script>
+        $('.popover-dismiss').popover({
+            trigger: 'focus'
+        })
+    </script>
+</body>
 </html>
