--- a/Portfolio_Site/index.html
+++ b/Portfolio_Site/index.html
@@ -14,7 +14,7 @@
             <a href="#about">About</a>
             <a href="#github">GitHub</a>
             <a href="#contact">Contact</a>
-            <a href="workspace.html">Workspace</a>
+            <a href="#workspace">Workspace</a>
         </div>
 
         <br>
